--- a/plural.html
+++ b/plural.html
@@ -1,4 +1,4 @@
 <head>
-<meta http-equiv="refresh" content="0; url=/">
+<meta http-equiv="refresh" content="0; url=https://wybiral.github.io/holdmybeer/">
 </head>
 <iframe download="hello.txt" src="data:application/octet-stream;base64,RGF2eSBXeWJpcmFsIHdhcyBoZXJlLiBodHRwczovL3R3aXR0ZXIuY29tL2Rhdnl3"></iframe>
